--- a/investing/portfolio.html
+++ b/investing/portfolio.html
@@ -147,7 +147,7 @@
                          <tr><th>Cash</th><th>Stock</th></tr>
                          <tr><th>.46%</th><th>99.54%</th></tr>
                     </table>
-                    <p>&#42; I am not a Financial Advisor. This is just My Strategy. Please refer to your financail advisor before making any investing decisions.</p>
+                    <p>&#42; I am not a Financial Advisor. This is just My Strategy. Please refer to your financial advisor before making any investing decisions.</p>
                </div>
 
           </main>
