--- a/pages/science.html
+++ b/pages/science.html
@@ -86,6 +86,9 @@
                               <li class="science-topics">
                                    <a href="../learning/chemistry.html#bonding">Electron Bonding</a>
                               </li>
+                              <li class="science-topics">
+                                   <a href="../learning/chemistry.html#states">States of Matter</a>
+                              </li>
                          </ul>
                     </section>
 
