--- a/index.html
+++ b/index.html
@@ -76,6 +76,10 @@
                          <div>
                               <h2 class="section-title">Website Updates</h2>
                               <p> 
+                                   <strong>2/6/2023: </strong> I started building out the Chemistry and Biology science
+                                   pages.
+                              </p>
+                              <p> 
                                    <strong>2/2/2023: </strong> I finished up the grammar and spelling checks on all the pages except the 
                                    company profiles. I plan to revamp the company profiles as I go through earnings.
                               </p>
