--- a/pages/science.html
+++ b/pages/science.html
@@ -88,6 +88,11 @@
                               </li>
                               <li class="science-topics">
                                    <a href="../learning/chemistry.html#states">States of Matter</a>
+                              </li><li class="science-topics">
+                                   <a href="../learning/chemistry.html#reactions">Reactions</a>
+                              </li>
+                              <li class="science-topics">
+                                   <a href="../learning/chemistry.html#redox">Redox Reactions</a>
                               </li>
                          </ul>
                     </section>
