--- a/pages/schrodinger.html
+++ b/pages/schrodinger.html
@@ -7,11 +7,10 @@
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
           <meta name="description" content="Profile for Schrodinger for physics based chemistry in Techbio">
           <meta name="author" content="CoderKid2k">
-
+          <link rel="icon" type="image/x-icon" href="../images/B2KFav.png">
           <link rel="stylesheet" href="../styles/header.css">
           <link rel="stylesheet" href="../styles/main.css">
           <link rel="stylesheet" href="../styles/footer.css">
-          <link rel="stylesheet" href="../styles/company.css">
 
      </head>
      <body>
