--- a/learning/chemotherapy.html
+++ b/learning/chemotherapy.html
@@ -7,7 +7,7 @@
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
           <meta name="description" content="Learn about different Chemotherapies like, Anthracyclines, Antimetabolites, Antimitotic Drugs, and Akylating Agents">
           <meta name="author" content="CoderKid2k">
-
+          <link rel="icon" type="image/x-icon" href="../images/B2KFav.png">
           <link rel="stylesheet" href="../styles/header.css">
           <link rel="stylesheet" href="../styles/main.css">
           <link rel="stylesheet" href="../styles/footer.css">
