--- a/learning/genetics.html
+++ b/learning/genetics.html
@@ -7,7 +7,7 @@
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
           <meta name="description" content="Learn concepts of Genetics like DNA Stucture, DNA Packaging, Chromosomes, Heredity, and Inheritance">
           <meta name="author" content="CoderKid2k">
-
+          <link rel="icon" type="image/x-icon" href="../images/B2KFav.png">
           <link rel="stylesheet" href="../styles/header.css">
           <link rel="stylesheet" href="../styles/main.css">
           <link rel="stylesheet" href="../styles/footer.css">
