--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
           <meta name="description" content="Learn about Biotechnology Investing and Science Concepts">
           <meta name="author" content="CoderKid2k">
-          <link rel="icon" type="image/x-icon" href="images/B2KFav.png">
+          <link rel="icon" type="image/x-icon" href="images/favicon.ico">
           <link rel="stylesheet" href="styles/header.css">
           <link rel="stylesheet" href="styles/main.css">
           <link rel="stylesheet" href="styles/footer.css">
@@ -61,13 +61,13 @@
                          <div>
                               <h2 class="section-title">Recent News</h2>
                               <p>
+                                   <strong>2/7/2023: </strong> I added to my CRBU position to bring it up to 3.86% position.
+                              </p>
+                              <p>
                                    <strong>2/2/2023: </strong> I added to my IPSC position to bring it up to 4.13% position.
                               </p>
                               <p>
                                    <strong>2/2/2023: </strong> I added my February Contribution
-                              </p>
-                              <p>
-                                   <strong>2/2/2023: </strong> I sold 25% of my CDXS position due to loss of confidence in the company.
                               </p>
                          </div>
                     </section>
@@ -76,14 +76,13 @@
                          <div>
                               <h2 class="section-title">Website Updates</h2>
                               <p> 
+                                   <strong>2/7/2023: </strong> I updated the cosmetics of the site with new header and nav color palette. I
+                                   also added a Favicon which will appear in bookmarks.
+                              </p>
+                              <p> 
                                    <strong>2/6/2023: </strong> I started building out the Chemistry and Biology science
                                    pages.
                               </p>
-                              <p> 
-                                   <strong>2/2/2023: </strong> I finished up the grammar and spelling checks on all the pages except the 
-                                   company profiles. I plan to revamp the company profiles as I go through earnings.
-                              </p>
-                              
                          </div>
                     </section>
                </div>
@@ -92,7 +91,7 @@
                          <div>
                               <h2 class="section-title">Youtube Featured Video</h2>
                               <div class="videos">
-                                   <iframe width="560" height="315" src="https://www.youtube.com/embed/NcxccxI8PWQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                                   <iframe width="560" height="315" src="https://www.youtube.com/embed/Ge4FU_AQD0E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                               </div>
                          </div>
                     </section>
@@ -101,7 +100,7 @@
                          <div>
                               <h2 class="section-title">Twitter Featured Thread</h2>
                               <div class="videos">
-                                   <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Today we are excited to talk about the BMS in-licensed candidate, EXS4318 as it enters the clinic; a potential first-in-class PKC theta inhibitor &amp; future treatment option for many inflammation &amp; immunology conditions. <a href="https://twitter.com/search?q=%24EXAI&amp;src=ctag&amp;ref_src=twsrc%5Etfw">$EXAI</a> <a href="https://twitter.com/exscientiaAI?ref_src=twsrc%5Etfw">@exscientiaAI</a> 1/8. <a href="https://t.co/tEQxu2wIpD">https://t.co/tEQxu2wIpD</a> <a href="https://t.co/30dgWMIB2v">pic.twitter.com/30dgWMIB2v</a></p>&mdash; Richard J Law 🚜🇺🇦🍉 (@drrichjlaw) <a href="https://twitter.com/drrichjlaw/status/1621139851679764480?ref_src=twsrc%5Etfw">February 2, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                                   <blockquote class="twitter-tweet"><p lang="en" dir="ltr">1/<a href="https://twitter.com/abbvie?ref_src=twsrc%5Etfw">@abbvie</a> is looking for its next hit now <br>that its blockbuster <a href="https://twitter.com/hashtag/immune?src=hash&amp;ref_src=twsrc%5Etfw">#immune</a>-<a href="https://twitter.com/hashtag/disease?src=hash&amp;ref_src=twsrc%5Etfw">#disease</a> <a href="https://twitter.com/hashtag/therapy?src=hash&amp;ref_src=twsrc%5Etfw">#therapy</a> <a href="https://twitter.com/hashtag/Humira?src=hash&amp;ref_src=twsrc%5Etfw">#Humira</a> - which accounts for 1/3 of <a href="https://twitter.com/search?q=%24ABBV&amp;src=ctag&amp;ref_src=twsrc%5Etfw">$ABBV</a> revenue &amp; made more than $135B in U.S. sales since its launch two decades ago, is facing lower-priced <a href="https://twitter.com/hashtag/competition?src=hash&amp;ref_src=twsrc%5Etfw">#competition</a>. <a href="https://twitter.com/hashtag/BioTech?src=hash&amp;ref_src=twsrc%5Etfw">#BioTech</a> <a href="https://twitter.com/hashtag/Genomics?src=hash&amp;ref_src=twsrc%5Etfw">#Genomics</a> <a href="https://twitter.com/hashtag/Pharma?src=hash&amp;ref_src=twsrc%5Etfw">#Pharma</a> <a href="https://twitter.com/WSJ?ref_src=twsrc%5Etfw">@WSJ</a> <a href="https://t.co/TXFcCgcv1n">pic.twitter.com/TXFcCgcv1n</a></p>&mdash; Yair Einhorn (@yaireinhorn) <a href="https://twitter.com/yaireinhorn/status/1622963687744061442?ref_src=twsrc%5Etfw">February 7, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                               </div>
                          </div>
                     </section>
