--- a/investing/portfolio.html
+++ b/investing/portfolio.html
@@ -7,7 +7,7 @@
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
           <meta name="description" content="My Biotech Portfolio">
           <meta name="author" content="CoderKid2k">
-          <link rel="icon" type="image/x-icon" href="../images/B2KFav.png">
+          <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
           <link rel="stylesheet" href="../styles/header.css">
           <link rel="stylesheet" href="../styles/main.css">
           <link rel="stylesheet" href="../styles/footer.css">
@@ -109,8 +109,8 @@
                               <tr><td>IPSC</td><td>4.15%</td><td>$14.62</td></tr>
                               <tr><td>SANA</td><td>5.29%</td><td>$10.26</td></tr>
                               <tr><td>FATE</td><td>5.44%</td><td>$0.00</td></tr>
-                              <tr><td>CRBU</td><td>3.72%</td><td>$18.21</td></tr>
-                              <tr class="totals"><td>Total</td><td colspan="3">18.60%</td></tr>
+                              <tr><td>CRBU</td><td>3.86%</td><td>$18.21</td></tr>
+                              <tr class="totals"><td>Total</td><td colspan="3">18.75%</td></tr>
                          </tbody>
                     </table>
      
@@ -145,7 +145,7 @@
                     <table class="theme">
                          <caption>Totals</caption>
                          <tr><th>Cash</th><th>Stock</th></tr>
-                         <tr><th>.46%</th><th>99.54%</th></tr>
+                         <tr><th>.32%</th><th>99.68%</th></tr>
                     </table>
                     <p>&#42; I am not a Financial Advisor. This is just My Strategy. Please refer to your financial advisor before making any investing decisions.</p>
                </div>
