--- a/pages/intellia.html
+++ b/pages/intellia.html
@@ -7,7 +7,7 @@
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
           <meta name="description" content="Profile of Intellia Therapeutics in Gene Editing">
           <meta name="author" content="CoderKid2k">
-          <link rel="icon" type="image/x-icon" href="../images/B2KFav.png">
+          <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
           <link rel="stylesheet" href="../styles/header.css">
           <link rel="stylesheet" href="../styles/main.css">
           <link rel="stylesheet" href="../styles/footer.css">
