--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
                          <div>
                               <h2 class="section-title">Website Updates</h2>
                               <p> 
-                                   <strong>2/7/2023: </strong> I updated the cosmetics of the site with new header and nav color palette. I
-                                   also added a Favicon which will appear in bookmarks.
+                                   <strong>2/8/2023: </strong> I updated the Twist Biosciences profile after going over their 
+                                   10Q.
                               </p>
                               <p> 
-                                   <strong>2/6/2023: </strong> I started building out the Chemistry and Biology science
-                                   pages.
+                                   <strong>2/7/2023: </strong> I updated the cosmetics of the site with new header and nav color palette. I
+                                   also added a Favicon which will appear in bookmarks.
                               </p>
                          </div>
                     </section>
@@ -91,7 +91,7 @@
                          <div>
                               <h2 class="section-title">Youtube Featured Video</h2>
                               <div class="videos">
-                                   <iframe width="560" height="315" src="https://www.youtube.com/embed/Ge4FU_AQD0E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                                   <iframe width="560" height="315" src="https://www.youtube.com/embed/8XVVTEu70gk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                               </div>
                          </div>
                     </section>
@@ -100,7 +100,7 @@
                          <div>
                               <h2 class="section-title">Twitter Featured Thread</h2>
                               <div class="videos">
-                                   <blockquote class="twitter-tweet"><p lang="en" dir="ltr">1/<a href="https://twitter.com/abbvie?ref_src=twsrc%5Etfw">@abbvie</a> is looking for its next hit now <br>that its blockbuster <a href="https://twitter.com/hashtag/immune?src=hash&amp;ref_src=twsrc%5Etfw">#immune</a>-<a href="https://twitter.com/hashtag/disease?src=hash&amp;ref_src=twsrc%5Etfw">#disease</a> <a href="https://twitter.com/hashtag/therapy?src=hash&amp;ref_src=twsrc%5Etfw">#therapy</a> <a href="https://twitter.com/hashtag/Humira?src=hash&amp;ref_src=twsrc%5Etfw">#Humira</a> - which accounts for 1/3 of <a href="https://twitter.com/search?q=%24ABBV&amp;src=ctag&amp;ref_src=twsrc%5Etfw">$ABBV</a> revenue &amp; made more than $135B in U.S. sales since its launch two decades ago, is facing lower-priced <a href="https://twitter.com/hashtag/competition?src=hash&amp;ref_src=twsrc%5Etfw">#competition</a>. <a href="https://twitter.com/hashtag/BioTech?src=hash&amp;ref_src=twsrc%5Etfw">#BioTech</a> <a href="https://twitter.com/hashtag/Genomics?src=hash&amp;ref_src=twsrc%5Etfw">#Genomics</a> <a href="https://twitter.com/hashtag/Pharma?src=hash&amp;ref_src=twsrc%5Etfw">#Pharma</a> <a href="https://twitter.com/WSJ?ref_src=twsrc%5Etfw">@WSJ</a> <a href="https://t.co/TXFcCgcv1n">pic.twitter.com/TXFcCgcv1n</a></p>&mdash; Yair Einhorn (@yaireinhorn) <a href="https://twitter.com/yaireinhorn/status/1622963687744061442?ref_src=twsrc%5Etfw">February 7, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                                   <blockquote class="twitter-tweet"><p lang="en" dir="ltr"><a href="https://t.co/9frGosyibN">https://t.co/9frGosyibN</a><br><br>– CNTY-101 is the first cell therapy product candidate engineered with six precision gene edits including a CD19-CAR, Allo-Evasion™ technology, IL-15 cytokine ...</p>&mdash; Biotech2k (@Biotech2k1) <a href="https://twitter.com/Biotech2k1/status/1623300535297122304?ref_src=twsrc%5Etfw">February 8, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                               </div>
                          </div>
                     </section>
