--- a/pages/twist.html
+++ b/pages/twist.html
@@ -89,11 +89,11 @@
                     <section class="section-container">
                          <h2 class="list-header">Science</h2>
                          <p class="profiles">
-                              Their key technology is DNA synthesis on a chip. They are capable of packing a million oligo pools onto 
-                              a single chip that can synthesize DNA. They reduce the amount of nucleotides used by 98% which saves on cost. 
-                              They are now working on enzyme synthesis. They sell DNA made by their
-                              synthesis business where anyone can submit a strand of DNA code and they will synthesize it and ship it 
-                              to order. It is a great business with them doing DNA for the Synthetic Biology space and Ginkgo Bioworks.
+                              Their key technology is DNA synthesis on a chip. They are capable of packing a million oligo pools onto a 
+                              single chip that can synthesize DNA. They reduce the amount of nucleotides used by 98% which saves on 
+                              cost. They sell DNA made by their synthesis business where anyone can submit a strand of DNA code, and 
+                              they will synthesize it and ship it to order. It is a great business with them doing DNA for the 
+                              Synthetic Biology space and Ginkgo Bioworks.
                          </p>
                          <p class="profiles">
                               They have a second business in the Next Gen Sequencing space by developing various testing kits. They have 
@@ -131,8 +131,8 @@
                               in the future. I would give this segment a valuation of $250 million value. 
                          </p>
                          <p class="profiles">
-                              All in, that is a $2.013 billion market cap. Based on the 56.5 million shares outstanding , 
-                              that comes to $35.62.
+                              All in, that is a $2.013 billion market cap. Based on the 56.858 million shares outstanding , 
+                              that comes to $35.40.
                          </p>
                     </section>  
 
@@ -140,7 +140,7 @@
                          <h2 class="list-header">Events</h2>
                          <p class="profiles">
                               They continue to assemble their first end-to-end DNA data storage system in anticipation of pilot 
-                              production to support early access to our Century Archive product toward the end of the calendar 
+                              production to support early access to their Century Archive product toward the end of the calendar 
                               year.
                          </p>
                     </section> 
