--- a/learning/immunology.html
+++ b/learning/immunology.html
@@ -284,7 +284,7 @@
                               protective immunity through antibodies from memory cells can significantly improve outcomes in infections.
                          </p>
                          <p>
-                              The flu virus has about 5 antigens that the immune system and make antibodies toward. They rapidly mutate 
+                              The flu virus has about 5 antigens that the immune system can make antibodies toward. They rapidly mutate 
                               to change to avoid the immune system. If you even have 1 antibody that knows just 1 of those antigens, 
                               it is shown that it can reduce the severity of infection by 20% or more. This is why vaccination becomes 
                               very powerful and important. It gives the immune system memory without the need for infection thus 
