Added Organic Chemistry

--- a/index.html
+++ b/index.html
@@ -76,12 +76,11 @@
                          <div>
                               <h2 class="section-title">Website Updates</h2>
                               <p> 
-                                   <strong>2/8/2023: </strong> I updated the Twist Biosciences profile after going over their 
-                                   10Q.
+                                   <strong>2/9/2023: </strong> Added the Chemistry of Life section to Chemistry.
                               </p>
                               <p> 
-                                   <strong>2/7/2023: </strong> I updated the cosmetics of the site with new header and nav color palette. I
-                                   also added a Favicon which will appear in bookmarks.
+                                   <strong>2/8/2023: </strong> I updated the Twist Biosciences profile after going over their 
+                                   10Q.
                               </p>
                          </div>
                     </section>
