--- a/pages/science.html
+++ b/pages/science.html
@@ -94,6 +94,9 @@
                               <li class="science-topics">
                                    <a href="../learning/chemistry.html#redox">Redox Reactions</a>
                               </li>
+                              <li class="science-topics">
+                                   <a href="../learning/chemistry.html#elements">Elements of Life</a>
+                              </li>
                          </ul>
                     </section>
 
