Updated Organic Chem

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                <div class="front-page">
                     <section class="news-updates">
                          <div>
-                              <h2 class="section-title">Youtube Featured Video</h2>
+                              <h2 class="section-title">Youtube</h2>
                               <div class="videos">
                                    <iframe width="560" height="315" src="https://www.youtube.com/embed/8XVVTEu70gk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                               </div>
@@ -97,9 +97,9 @@
 
                     <section class="news-updates">
                          <div>
-                              <h2 class="section-title">Twitter Featured Thread</h2>
+                              <h2 class="section-title">Twitter</h2>
                               <div class="videos">
-                                   <blockquote class="twitter-tweet"><p lang="en" dir="ltr"><a href="https://t.co/9frGosyibN">https://t.co/9frGosyibN</a><br><br>– CNTY-101 is the first cell therapy product candidate engineered with six precision gene edits including a CD19-CAR, Allo-Evasion™ technology, IL-15 cytokine ...</p>&mdash; Biotech2k (@Biotech2k1) <a href="https://twitter.com/Biotech2k1/status/1623300535297122304?ref_src=twsrc%5Etfw">February 8, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                                   <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Check out the first edition of the Synbio for Human Health newsletter (by <a href="https://twitter.com/FionaRMischel?ref_src=twsrc%5Etfw">@FionaRMischel</a>!) <a href="https://t.co/KsEOmLtPT0">https://t.co/KsEOmLtPT0</a><br><br>Be sure to subscribe for more insights from <a href="https://twitter.com/hashtag/synbio?src=hash&amp;ref_src=twsrc%5Etfw">#synbio</a> industry leaders: <a href="https://t.co/gM76w9LvIu">https://t.co/gM76w9LvIu</a><br><br>Today, we bring you insights from:<br>1/</p>&mdash; SynBioBeta (@SynBioBeta) <a href="https://twitter.com/SynBioBeta/status/1623722718385541132?ref_src=twsrc%5Etfw">February 9, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                               </div>
                          </div>
                     </section>
