--- a/pages/science.html
+++ b/pages/science.html
@@ -97,6 +97,9 @@
                               <li class="science-topics">
                                    <a href="../learning/chemistry.html#elements">Elements of Life</a>
                               </li>
+                              <li class="science-topics">
+                                   <a href="../learning/chemistry.html#functional">Functioal Groups</a>
+                              </li>
                          </ul>
                     </section>
 
