--- a/index.html
+++ b/index.html
@@ -1,18 +1,36 @@
 <!DOCTYPE html>
 <html lang="en-US">
      <head>
+
+          <!-- Google tag (gtag.js) -->
+          <script async src="https://www.googletagmanager.com/gtag/js?id=G-39ZHJP00WP"></script>
+          <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'G-39ZHJP00WP');
+          </script>
+
+          <!-- Page Title -->
           <title>Learn about Biotech Investing and Science Concepts</title>
 
+          <!-- Meta Tags -->
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
           <meta name="description" content="Learn about Biotechnology Investing and Science Concepts">
           <meta name="author" content="CoderKid2k">
+
+          <!-- Favicon -->
           <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+
+          <!-- Style Sheets -->
           <link rel="stylesheet" href="styles/header.css">
           <link rel="stylesheet" href="styles/main.css">
           <link rel="stylesheet" href="styles/footer.css">
      </head>
      <body>
+          
           <header id="header">
 
                <!--This Starts the Header-->
@@ -76,7 +94,8 @@
                          <div>
                               <h2 class="section-title">Website Updates</h2>
                               <p> 
-                                   <strong>2/9/2023: </strong> Added the Chemistry of Life section to Chemistry.
+                                   <strong>2/9/2023: </strong> Working on building out the Chemistry topic with Organic Chemistry 
+                                   and Biochemistry.
                               </p>
                               <p> 
                                    <strong>2/8/2023: </strong> I updated the Twist Biosciences profile after going over their 
