Finished Google Analystics

--- a/investing/investing.html
+++ b/investing/investing.html
@@ -12,13 +12,19 @@
           gtag('config', 'G-39ZHJP00WP');
           </script>
 
+          <!-- Page Title -->
           <title>My Strategy to Investing in Biotech</title>
 
+          <!-- Meta Tags -->
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
           <meta name="description" content="Sharing My Strategy around Investing in Biotech">
           <meta name="author" content="CoderKid2k">
+
+          <!-- Favicon -->
           <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
+
+          <!-- Style Sheets -->
           <link rel="stylesheet" href="../styles/header.css">
           <link rel="stylesheet" href="../styles/main.css">
           <link rel="stylesheet" href="../styles/footer.css">
