--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@
                          <div>
                               <h2 class="section-title">Recent News</h2>
                               <p>
+                                   <strong>2/9/2023: </strong> I added a starting position in ABCL to my Charity IRA of 1.22%.
+                              </p>
+                              <p>
                                    <strong>2/7/2023: </strong> I added to my CRBU position to bring it up to 3.86% position.
                               </p>
                               <p>
                                    <strong>2/2/2023: </strong> I added to my IPSC position to bring it up to 4.13% position.
-                              </p>
-                              <p>
-                                   <strong>2/2/2023: </strong> I added my February Contribution
                               </p>
                          </div>
                     </section>
@@ -93,6 +93,10 @@
                     <section class="news-updates">
                          <div>
                               <h2 class="section-title">Website Updates</h2>
+                              <p> 
+                                   <strong>2/9/2023: </strong> I set up Google Analytics so I can see which parts of the website get most 
+                                   use. That way I can talior my new content and expansions to the areas that get the most traffic.
+                              </p>
                               <p> 
                                    <strong>2/9/2023: </strong> Working on building out the Chemistry topic with Organic Chemistry 
                                    and Biochemistry.
