--- a/pages/mirati.html
+++ b/pages/mirati.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html lang="en-US">
      <head>
+
+          <!-- Google tag (gtag.js) -->
+          <script async src="https://www.googletagmanager.com/gtag/js?id=G-39ZHJP00WP"></script>
+          <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'G-39ZHJP00WP');
+          </script>
+
           <title>Mirati Therapeutics Profile</title>
 
           <meta charset="UTF-8">
