--- a/pages/science.html
+++ b/pages/science.html
@@ -109,7 +109,7 @@
                                    <a href="../learning/chemistry.html#elements">Elements of Life</a>
                               </li>
                               <li class="science-topics">
-                                   <a href="../learning/chemistry.html#functional">Functioal Groups</a>
+                                   <a href="../learning/chemistry.html#functional">Functional Groups</a>
                               </li>
                          </ul>
                     </section>
