--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
           <meta name="description" content="Learn about Biotechnology Investing and Science Concepts">
+          <meta name="keywords" content="Biotechnology, Biotech, Genetics, Immunology, Oncology, Cell Therapies"
           <meta name="author" content="CoderKid2k">
 
           <!-- Favicon -->
