--- a/learning/chemistry.html
+++ b/learning/chemistry.html
@@ -99,6 +99,9 @@
                          <li class="science-topics">
                               <a href="#functional">Functional Groups</a>
                          </li>
+                         <li class="science-topics">
+                              <a href="biochemistry.html">Biochemistry</a>
+                         </li>
                     </ul>
                     
 
@@ -711,12 +714,12 @@
                          <p>
                               The prefix of the hydrocarbon is named based on the number of carbons in its longest chain. Above is 
                               a list of the prefixes up to 10 carbons. If you have a single carbon filled with hydrogens, it's 
-                              methane. The meth comes from the number of carbons with 1 and the ane comes from our suffix because 
+                              methane. The meth comes from the number of carbons with 1 and the -ane comes from our suffix because 
                               it has no bonds or only single bonds. 
                          </p>
-                         <p>
+                         <p> 
                               If we have a 3 carbon chain with all single bonds, it would be propane. The pro comes from the 3 
-                              carbons in the chain and the ane comes from the fact it only has single bonds. A hydrocarbon that 
+                              carbons in the chain and the -ane comes from the fact it only has single bonds. A hydrocarbon that 
                               has 3 carbons with a double bond would be Propene. A hydrocarbon with 3 carbons in which one is a 
                               triple bond would be Propyne
                          </p>
@@ -773,7 +776,7 @@
                               Halogens are a group of elements on the periodic table. They are the 7th row which means they have 7 
                               of their desired 8 electrons in their outer shell. That makes them very reactive elements. They make 
                               up Fluorine, Chlorine, Bromine, and Iodine. They make up many slats and are reactive functional 
-                              groups You will see these groups in some drugs. They can also bee see as positively charged 
+                              groups You will see these groups in some drugs. They can also be seen as positively charged 
                               ions.
                          </p>
                          <p>
