--- a/pages/science.html
+++ b/pages/science.html
@@ -111,6 +111,9 @@
                               <li class="science-topics">
                                    <a href="../learning/chemistry.html#functional">Functional Groups</a>
                               </li>
+                              <li class="science-topics">
+                                   <a href="../learning/biochemistry.html">Biochemistry</a>
+                              </li>
                          </ul>
                     </section>
 
