--- a/index.html
+++ b/index.html
@@ -80,13 +80,13 @@
                          <div>
                               <h2 class="section-title">Recent News</h2>
                               <p>
-                                   <strong>2/9/2023: </strong> I added a starting position in ABCL to my Charity IRA of 1.22%.
+                                   <strong>2/10/2023: </strong> I sold just enough for my XBI in my Charity IRA to buy .94% position in CRSP.
                               </p>
                               <p>
-                                   <strong>2/7/2023: </strong> I added to my CRBU position to bring it up to 3.86% position.
+                                   <strong>2/10/2023: </strong> I added a starting position in VERV to my Charity IRA of .94%.
                               </p>
                               <p>
-                                   <strong>2/2/2023: </strong> I added to my IPSC position to bring it up to 4.13% position.
+                                   <strong>2/9/2023: </strong> I added a starting position in ABCL to my Charity IRA of .94%.
                               </p>
                          </div>
                     </section>
@@ -95,16 +95,16 @@
                          <div>
                               <h2 class="section-title">Website Updates</h2>
                               <p> 
+                                   <strong>2/8/2023: </strong> I added the Science Page under Chemistry for Biochemistry. I plan to 
+                                   fill it out over the weekend.
+                              </p>
+                              <p> 
                                    <strong>2/9/2023: </strong> I set up Google Analytics so I can see which parts of the website get most 
                                    use. That way I can talior my new content and expansions to the areas that get the most traffic.
                               </p>
                               <p> 
                                    <strong>2/9/2023: </strong> Working on building out the Chemistry topic with Organic Chemistry 
                                    and Biochemistry.
-                              </p>
-                              <p> 
-                                   <strong>2/8/2023: </strong> I updated the Twist Biosciences profile after going over their 
-                                   10Q.
                               </p>
                          </div>
                     </section>
