--- a/index.html
+++ b/index.html
@@ -95,16 +95,16 @@
                          <div>
                               <h2 class="section-title">Website Updates</h2>
                               <p> 
+                                   <strong>2/11/2023: </strong> Finished up the Chemistry and Biochemistry pages. I plan to start the 
+                                   Biology pages tomorrow.
+                              </p>
+                              <p> 
                                    <strong>2/8/2023: </strong> I added the Science Page under Chemistry for Biochemistry. I plan to 
                                    fill it out over the weekend.
                               </p>
                               <p> 
                                    <strong>2/9/2023: </strong> I set up Google Analytics so I can see which parts of the website get most 
                                    use. That way I can talior my new content and expansions to the areas that get the most traffic.
-                              </p>
-                              <p> 
-                                   <strong>2/9/2023: </strong> Working on building out the Chemistry topic with Organic Chemistry 
-                                   and Biochemistry.
                               </p>
                          </div>
                     </section>
@@ -114,8 +114,7 @@
                          <div>
                               <h2 class="section-title">Youtube</h2>
                               <div class="videos">
-                                   <iframe width="560" height="315" src="https://www.youtube.com/embed/8XVVTEu70gk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                              </div>
+                                   <iframe width="560" height="315" src="https://www.youtube.com/embed/ECNlSvlDTbw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                          </div>
                     </section>
 
