Overhaul of the Companies Pages

--- a/index.html
+++ b/index.html
@@ -46,19 +46,19 @@
                                    <a href="index.html">Home</a>
                               </li>
                               <li class="nav-item">
-                                   <a href="pages/innovation.html">Innovation</a>
+                                   <a href="innovation/innovation.html">Innovation</a>
                               </li>
                               <li class="nav-item">
-                                   <a href="pages/companies.html">Companies</a>
+                                   <a href="companies/companies.html">Companies</a>
                               </li>
                               <li class="nav-item">
                                    <a href="investing/investing.html">Investing</a>
                               </li>
                               <li class="nav-item">
-                                   <a href="pages/science.html">Science</a>
+                                   <a href="learning/science.html">Science</a>
                               </li>
                               <li class="nav-item">
-                                   <a href="pages/clinicaldata.html">Clinical Data</a>
+                                   <a href="clinicaldata/clinicaldata.html">Clinical Data</a>
                               </li>
                          </ul>
                </nav>
@@ -95,16 +95,16 @@
                          <div>
                               <h2 class="section-title">Website Updates</h2>
                               <p> 
+                                   <strong>2/1/2023: </strong> I did a major overall of the Companies Pages. I set up a left side 
+                                   collapsible menu. 
+                              </p>
+                              <p> 
                                    <strong>2/11/2023: </strong> Finished up the Chemistry and Biochemistry pages. I plan to start the 
                                    Biology pages tomorrow.
                               </p>
                               <p> 
-                                   <strong>2/8/2023: </strong> I added the Science Page under Chemistry for Biochemistry. I plan to 
+                                   <strong>2/10/2023: </strong> I added the Science Page under Chemistry for Biochemistry. I plan to 
                                    fill it out over the weekend.
-                              </p>
-                              <p> 
-                                   <strong>2/9/2023: </strong> I set up Google Analytics so I can see which parts of the website get most 
-                                   use. That way I can talior my new content and expansions to the areas that get the most traffic.
                               </p>
                          </div>
                     </section>
