--- a/investing/investing.html
+++ b/investing/investing.html
@@ -39,26 +39,26 @@
                </div>
 
                <nav>
-                         <ul class="menu">
-                              <li class="nav-item">
-                                   <a href="../index.html">Home</a>
-                              </li>
-                              <li class="nav-item">
-                                   <a href="../pages/innovation.html">Innovation</a>
-                              </li>
-                              <li class="nav-item">
-                                   <a href="../pages/companies.html">Companies</a>
-                              </li>
-                              <li class="nav-item">
-                                   <a href="investing.html">Investing</a>
-                              </li>
-                              <li class="nav-item">
-                                   <a href="../pages/science.html">Science</a>
-                              </li>
-                              <li class="nav-item">
-                                   <a href="../pages/clinicaldata.html">Clinical Data</a>
-                              </li>
-                         </ul>
+                    <ul class="menu">
+                         <li class="nav-item">
+                              <a href="../index.html">Home</a>
+                         </li>
+                         <li class="nav-item">
+                              <a href="../innovation/innovation.html">Innovation</a>
+                         </li>
+                         <li class="nav-item">
+                              <a href="../companies/companies.html">Companies</a>
+                         </li>
+                         <li class="nav-item">
+                              <a href="../investing/investing.html">Investing</a>
+                         </li>
+                         <li class="nav-item">
+                              <a href="../learning/science.html">Science</a>
+                         </li>
+                         <li class="nav-item">
+                              <a href="../clinicaldata/clinicaldata.html">Clinical Data</a>
+                         </li>
+                    </ul>
                </nav>
 
                <div class="hamburger">
