--- a/learning/chemistry.html
+++ b/learning/chemistry.html
@@ -12,13 +12,19 @@
           gtag('config', 'G-39ZHJP00WP');
           </script>
 
+          <!-- Page Title -->
           <title>Learn About Chemistry</title>
 
+          <!-- Meta Tags -->
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
           <meta name="description" content="Learn about concepts of Chemistry like atomic structure, ions, and reactions">
           <meta name="author" content="CoderKid2k">
+
+          <!-- Favicon -->
           <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
+
+          <!-- Style Sheets -->
           <link rel="stylesheet" href="../styles/header.css">
           <link rel="stylesheet" href="../styles/main.css">
           <link rel="stylesheet" href="../styles/footer.css">
@@ -40,19 +46,19 @@
                               <a href="../index.html">Home</a>
                          </li>
                          <li class="nav-item">
-                              <a href="../pages/innovation.html">Innovation</a>
+                              <a href="../innovation/innovation.html">Innovation</a>
                          </li>
                          <li class="nav-item">
-                              <a href="../pages/companies.html">Companies</a>
+                              <a href="../companies/companies.html">Companies</a>
                          </li>
                          <li class="nav-item">
                               <a href="../investing/investing.html">Investing</a>
                          </li>
                          <li class="nav-item">
-                              <a href="../pages/science.html">Science</a>
+                              <a href="../learning/science.html">Science</a>
                          </li>
                          <li class="nav-item">
-                              <a href="../pages/clinicaldata.html">Clinical Data</a>
+                              <a href="../clinicaldata/clinicaldata.html">Clinical Data</a>
                          </li>
                     </ul>
                </nav>
